# pointcloud_filters

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: lower_resolution_filter.yaml
include/pointcloud_filters/: lower_resolution_filter.h  pointcloud_filters.h
launch/: lower_resolution_filter.launch  pointcloud_filters.launch
src/: lower_resolution_filter.cpp  lower_resolution_filter_node.cpp  pointcloud_filters.cpp  pointcloud_filters_node.cpp
