<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_filters</name>
  <version>0.1.0</version>
  <description>The pointcloud_filters package, based on RComponent structure. Node to filter a PointCloud2 message.</description>

  <maintainer email="jgomez@robotnik.es">Jose Gomez</maintainer>

  <author email="jgomez@robotnik.es">Jose Gomez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
